--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ authors = ["Thijs Cadier <thijs@appsignal.com>"]
 edition = "2018"
 
 [dependencies]
+anyhow = "^1.0"
 notify = "^4.0"
+serde = {version = "^1.0", features = ["derive"]}
+toml = "^0.5"
