--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "^1.0"
-notify = "^4.0"
+notify = {version = "^5.1", default-features = false, features = ["macos_kqueue"]}
 serde = {version = "^1.0", features = ["derive"]}
 toml = "^0.5"
 colored = "^2.0"
